Tue Jan 12 00:06:00 1999  Richard Henderson  <rth@cygnus.com>

        * Makefile.in (OBJECTS): Add sbitmap.o.
        (BASIC_BLOCK_H): Add sbitmap.h.
        * basic-block.h: Move simple bitmap code to sbitmap.h.
        * flow.c: Move simple bitmap code to sbitmap.c
        * sbitmap.h, sbitmap.c: New files.

Mon Jan 11 23:51:50 1999  Richard Henderson  <rth@cygnus.com>

	* alpha.h (TARGET_SWITCHES): Document switches.
	(TARGET_OPTIONS): Likewise.

	* alpha/elf.h (ASM_FINISH_DECLARE_OBJECT): Use HOST_WIDE_INT_PRINT_DEC.

Mon Jan 11 22:54:14 1999  Richard Henderson  <rth@cygnus.com>

	* tree.c (new_alias_set): Return zero if !flag_strict_aliasing.

Mon Jan 11 22:36:01 1999  Richard Henderson  <rth@cygnus.com>

	* basic-block.h (basic_block_head): Rename to x_basic_block_head.
	(basic_block_end): Rename to x_basic_block_end.
	(BLOCK_HEAD, BLOCK_END): Update.

	* caller-save.c: Change basic_block_head/end references to 
	BLOCK_HEAD/END.
	* combine.c, flow.c, function.c, gcse.c, global.c: Likewise.
	* graph.c, haifa-sched.c, local-alloc.c, regclass.c: Likewise.
	* regmove.c, reload1.c, reorg.c, sched.c: Likewise.

Sat Jan  9 23:54:09 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.c (xstrerror): Renamed from my_strerror.  All callers
 	changed.  Remove prototype since we get that from libiberty.h.

	* protoize.c (xstrerror): Likewise.

Sat Jan  9 23:22:04 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.c (read_specs): Ensure format specifiers match their arguments.

Sat Jan  9 20:04:24 1999  Richard Henderson  <rth@cygnus.com>

	* tree.c (copy_node): Oops.  That would be copy not zero
	in that last change.

Sun Jan 10 15:35:41 1999  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>

	* config/c4x/c4x.c: Include system.h.
 	(c4x_caller_save_map): Disable caller save for RC.
	(c4x_optimization_options): Disable scheduling before reload.
	(valid_parallel_load_store) : Define return type as int.  
	Remove unused variable regs.