@@ -1,3 +1,9 @@
+Tue Jan 12 00:23:31 1999  Richard Henderson  <rth@cygnus.com>
+
+	* function.c (purge_addressof_1): If the note accesses a mem+addressof
+	in a wider mode than any replacement, adjust the cached replacement.
+	Cache trivial substitutions as well.
+
 Tue Jan 12 00:06:00 1999  Richard Henderson  <rth@cygnus.com>
 
         * Makefile.in (OBJECTS): Add sbitmap.o.
